contrast fix, h1 to 52 on vehicle page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,7 +66,7 @@ h1 {
 
 .error-link {
   text-decoration: none;
-  color: #007bff;
+  color: rgb(8, 8, 104);
 }
 
 .error-link:hover {
